[package]
name = "weather-cli"
version = "0.1.0"
authors = ["Gal Winer"]
edition = "2021"


[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
